Modified page titles to relate with their contents

--- a/cv.html
+++ b/cv.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML><head><title>Crypto trading Platform | By Leon Chau</title><meta charset="utf-8"><meta name="theme-color" content="#ff056"><meta name="color-scheme" content="light"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="shortcut icon" href="../favicon.ico"><link rel="stylesheet" href="../css/tailwind.min.css"><link rel="stylesheet" href="../css/all.min.css"><style>@font-face {
+<!DOCTYPE HTML><head><title>Curriculum Vitae template | Ideas and tryouts</title><meta charset="utf-8"><meta name="theme-color" content="#ff056"><meta name="color-scheme" content="light"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="shortcut icon" href="../favicon.ico"><link rel="stylesheet" href="../css/tailwind.min.css"><link rel="stylesheet" href="../css/all.min.css"><style>@font-face {
                 font-family: 'Fredoka';
                 src: url('../font.woff2') format('woff2');
             }
