--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en"><head>
-    <title>Product Preview</title>
+    <title>Product Preview | Ideas and tryouts</title>
     <meta charset="utf-8">
     <meta name="theme-color" content="#ff056">
     <meta name="color-scheme" content="light">
