--- a/backend-details.html
+++ b/backend-details.html
@@ -8,7 +8,7 @@
 </style></head><body class="bg-black text-white">
 <h1 class="mb-4 mt-20 text-white text-center text-4xl fill bg-gradient-to-r from-gray-200 via-gray-500 to-blue-700">Crypto market API backend</h1>
 <p class="opacity-70 text-center mx-10">Details of the estimated cost of keeping the backend for <a href="https://kdao2.net" class="border-b"><code>https://kdao2.net</code></a><code> running without downtimes</code></p>
-<img src="/img/kdaolytics.png" class="m-auto"><img src="/img/kdaolytics-1.png" class="m-auto">
+<img src="/img/usage.png" class="m-auto"><img src="/img/usage-1.png" class="m-auto">
 <p class="text-center m-10 opacity-60">From the usage data, CPU computime time and function invocation charts above, the estimated accrued monthly fee along with details are explained below</p><div class="text-center mx-10 my-6 opacity-80"><code class="font-semibold text-xl">$100/month</code> to be paid via card<a href="https://paystack.shop/pay/erpevo/crypto-api" class="underline p-1">through this Paystack link</a>.<br>Payment should be made upon receival given the generosity of allowed free usage for over a week at the cost of the available backend compute</div>
 <div class="text-center">
 <ul class="font-bookweb text-left list-disc border rounded-lg inline-block m-4 p-5">
